fix x overflow problem on width bigger than 768px

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,15 @@ body{
     html, body {
     width: auto !important;
     overflow-x: hidden !important;
+    width: 100vw;
     }
 }
+
+html, body {
+    width: auto !important;
+    overflow-x: hidden !important;
+    width: 100vw;
+    }
 
 
 .fa-3x{
